test/bad/check/Cyclical.hs
module Cyclical where

a = b

b = a
